<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.sw2017.calculator.Calculator"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/button7"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:text="7"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button4" />

    <Button
        android:id="@+id/button8"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:text="8"
        app:layout_constraintLeft_toRightOf="@+id/button7"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button5" />

    <Button
        android:id="@+id/button9"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:text="9"
        app:layout_constraintLeft_toRightOf="@+id/button8"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button6" />


    <Button
        android:id="@+id/button4"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:text="4"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:text="5"
        app:layout_constraintLeft_toRightOf="@+id/button4"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:text="6"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button3" />


    <Button
        android:id="@+id/button1"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:text="1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonClear" />

    <Button
        android:id="@+id/button2"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:text="2"
        app:layout_constraintLeft_toRightOf="@+id/button1"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:text="3"
        app:layout_constraintLeft_toRightOf="@+id/button2"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEquals" />


    <Button
        android:id="@+id/buttonClear"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:text="C"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/button0"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toRightOf="@+id/buttonClear"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:text="="
        app:layout_constraintLeft_toRightOf="@+id/button0"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:text="+"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubtract" />

    <Button
        android:id="@+id/buttonSubtract"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:text="-"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiply" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:text="*"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDivide" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:text="/"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/numberView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="0"
        android:textAlignment="viewStart"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
